adding some links

--- a/04_RAG_Evaluation/04_03_Faithfulness.ipynb
+++ b/04_RAG_Evaluation/04_03_Faithfulness.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "# 🤝 **Faithfulness**\n",
     "\n",
-    "- 🎯 Faithfulness evaluates how accurately responses align with the provided context.\n",
+    "- 🎯 [Faithfulness](https://github.com/explodinggradients/ragas/blob/main/src/ragas/metrics/_faithfulness.py) evaluates how accurately responses align with the provided context.\n",
     "\n",
     "- 🕵️‍♂️ The process involves two steps: \n",
     "    - identifying statements within an answer\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,39 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'long_form_answer',\n",
-       " 'instruction': 'Create one or more statements from each sentence in the given answer.',\n",
-       " 'output_format_instruction': 'The output should be a well-formatted JSON instance that conforms to the JSON schema below.\\n\\nAs an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\\nthe object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\\n\\nHere is the output JSON schema:\\n```\\n{\"description\": \"the list of extracted statements\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}\\n```\\n\\nDo not return any preamble or explanations, return only a pure JSON string surrounded by triple backticks (```).',\n",
-       " 'examples': [{'question': 'Who was  Albert Einstein and what is he best known for?',\n",
-       "   'answer': 'He was a German-born theoretical physicist, widely acknowledged to be one of the greatest and most influential physicists of all time. He was best known for developing the theory of relativity, he also made important contributions to the development of the theory of quantum mechanics.',\n",
-       "   'statements': ['Albert Einstein, a German-born theoretical physicist, is renowned for being one of the most influential physicists in history.',\n",
-       "    'Albert Einstein was best known for his theory of relativity.',\n",
-       "    \"Einstein's contributions significantly advanced the field of quantum mechanics\",\n",
-       "    \"Recognized globally, Einstein's work has profoundly impacted the scientific community\",\n",
-       "    \"Einstein's groundbreaking theories continue to shape our understanding of physics today.\"]},\n",
-       "  {'question': 'Cadmium Chloride is slightly soluble in this chemical, it is also called what?',\n",
-       "   'answer': 'alcohol',\n",
-       "   'statements': ['Cadmium Chloride is slightly soluble in alcohol.']},\n",
-       "  {'question': 'Were Hitler and Benito Mussolini of the same nationality?',\n",
-       "   'answer': \"Sorry, I can't provide answer to that question.\",\n",
-       "   'statements': []}],\n",
-       " 'input_keys': ['question', 'answer'],\n",
-       " 'output_key': 'statements',\n",
-       " 'output_type': 'json',\n",
-       " 'language': 'english'}"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "faithfulness.long_form_answer_prompt.__dict__"
    ]
@@ -203,48 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'nli_statements',\n",
-       " 'instruction': 'Your task is to judge the faithfulness of a series of statements based on a given context. For each statement you must return verdict as 1 if the statement can be verified based on the context or 0 if the statement can not be verified based on the context.',\n",
-       " 'output_format_instruction': 'The output should be a well-formatted JSON instance that conforms to the JSON schema below.\\n\\nAs an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\\nthe object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\\n\\nHere is the output JSON schema:\\n```\\n{\"type\": \"array\", \"items\": {\"$ref\": \"#/definitions/StatementFaithfulnessAnswer\"}, \"definitions\": {\"StatementFaithfulnessAnswer\": {\"title\": \"StatementFaithfulnessAnswer\", \"type\": \"object\", \"properties\": {\"statement\": {\"title\": \"Statement\", \"description\": \"the original statement, word-by-word\", \"type\": \"string\"}, \"verdict\": {\"title\": \"Verdict\", \"description\": \"the verdict(0/1) of the faithfulness.\", \"type\": \"integer\"}, \"reason\": {\"title\": \"Reason\", \"description\": \"the reason of the verdict\", \"type\": \"string\"}}, \"required\": [\"statement\", \"verdict\", \"reason\"]}}}\\n```\\n\\nDo not return any preamble or explanations, return only a pure JSON string surrounded by triple backticks (```).',\n",
-       " 'examples': [{'context': 'John is a student at XYZ University. He is pursuing a degree in Computer Science. He is enrolled in several courses this semester, including Data Structures, Algorithms, and Database Management. John is a diligent student and spends a significant amount of time studying and completing assignments. He often stays late in the library to work on his projects.',\n",
-       "   'statements': ['John is majoring in Biology.',\n",
-       "    'John is taking a course on Artificial Intelligence.',\n",
-       "    'John is a dedicated student.',\n",
-       "    'John has a part-time job.'],\n",
-       "   'answer': [{'statement': 'John is majoring in Biology.',\n",
-       "     'verdict': 0,\n",
-       "     'reason': \"John's major is explicitly mentioned as Computer Science. There is no information suggesting he is majoring in Biology.\"},\n",
-       "    {'statement': 'John is taking a course on Artificial Intelligence.',\n",
-       "     'verdict': 0,\n",
-       "     'reason': 'The context mentions the courses John is currently enrolled in, and Artificial Intelligence is not mentioned. Therefore, it cannot be deduced that John is taking a course on AI.'},\n",
-       "    {'statement': 'John is a dedicated student.',\n",
-       "     'verdict': 1,\n",
-       "     'reason': 'The context states that he spends a significant amount of time studying and completing assignments. Additionally, it mentions that he often stays late in the library to work on his projects, which implies dedication.'},\n",
-       "    {'statement': 'John has a part-time job.',\n",
-       "     'verdict': 0,\n",
-       "     'reason': 'There is no information given in the context about John having a part-time job.'}]},\n",
-       "  {'context': 'Photosynthesis is a process used by plants, algae, and certain bacteria to convert light energy into chemical energy.',\n",
-       "   'statements': ['Albert Einstein was a genius.'],\n",
-       "   'answer': [{'statement': 'Albert Einstein was a genius.',\n",
-       "     'verdict': 0,\n",
-       "     'reason': 'The context and statement are unrelated'}]}],\n",
-       " 'input_keys': ['context', 'statements'],\n",
-       " 'output_key': 'answer',\n",
-       " 'output_type': 'json',\n",
-       " 'language': 'english'}"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "faithfulness.nli_statements_message.__dict__"
    ]
