--- a/04_RAG_Evaluation/04_06_Answer_Correctness.ipynb
+++ b/04_RAG_Evaluation/04_06_Answer_Correctness.ipynb
@@ -111,7 +111,7 @@
    "source": [
     "# ✅ **Answer Correctness**\n",
     "\n",
-    "Answer correctness measures how closely a model's response aligns with the established ground truth, focusing on precision and accuracy.\n",
+    "[Answer correctness](https://github.com/explodinggradients/ragas/blob/main/src/ragas/metrics/_answer_correctness.py) measures how closely a model's response aligns with the established ground truth, focusing on precision and accuracy.\n",
     "\n",
     "- 📏 **Scoring Range**: Scores range from 0 to 1, where scores near 1 indicate a high level of alignment with the correct answer.\n",
     "\n",
