flattening list of strings into single string due to change in ragas expectations

--- a/04_RAG_Evaluation/04_04_Answer_Relevancy.ipynb
+++ b/04_RAG_Evaluation/04_04_Answer_Relevancy.ipynb
@@ -73,15 +73,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61c2dad794a94e289be4e417f2d2dea4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/30 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from datasets import load_dataset \n",
     "\n",
     "dataset = load_dataset(\"explodinggradients/fiqa\", split='baseline', trust_remote_code=True)\n",
     "\n",
-    "dataset = dataset.rename_column(\"ground_truths\", \"ground_truth\")"
+    "dataset = dataset.rename_column(\"ground_truths\", \"ground_truth\")\n",
+    "\n",
+    "# Function to concatenate list of strings into a single string\n",
+    "def flatten_list_of_strings(example):\n",
+    "    # Adjust 'your_list_column' to the actual column name holding the list of strings\n",
+    "    example['ground_truth'] = ' '.join(example['ground_truth'])\n",
+    "    return example\n",
+    "\n",
+    "# Apply the function to each example in the dataset\n",
+    "dataset = dataset.map(flatten_list_of_strings)"
    ]
   },
   {
@@ -140,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +173,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'question_generation',\n",
+       " 'instruction': 'Generate a question for the given answer and Identify if answer is noncommittal. Give noncommittal as 1 if the answer is noncommittal and 0 if the answer is committal. A noncommittal answer is one that is evasive, vague, or ambiguous. For example, \"I don\\'t know\" or \"I\\'m not sure\" are noncommittal answers',\n",
+       " 'output_format_instruction': 'The output should be a well-formatted JSON instance that conforms to the JSON schema below.\\n\\nAs an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\\nthe object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\\n\\nHere is the output JSON schema:\\n```\\n{\"type\": \"object\", \"properties\": {\"question\": {\"title\": \"Question\", \"type\": \"string\"}, \"noncommittal\": {\"title\": \"Noncommittal\", \"type\": \"integer\"}}, \"required\": [\"question\", \"noncommittal\"]}\\n```\\n\\nDo not return any preamble or explanations, return only a pure JSON string surrounded by triple backticks (```).',\n",
+       " 'examples': [{'answer': 'Albert Einstein was born in Germany.',\n",
+       "   'context': 'Albert Einstein was a German-born theoretical physicist who is widely held to be one of the greatest and most influential scientists of all time',\n",
+       "   'output': {'question': 'Where was Albert Einstein born?',\n",
+       "    'noncommittal': 0}},\n",
+       "  {'answer': 'It can change its skin color based on the temperature of its environment.',\n",
+       "   'context': 'A recent scientific study has discovered a new species of frog in the Amazon rainforest that has the unique ability to change its skin color based on the temperature of its environment.',\n",
+       "   'output': {'question': 'What unique ability does the newly discovered species of frog have?',\n",
+       "    'noncommittal': 0}},\n",
+       "  {'answer': 'Everest',\n",
+       "   'context': 'The tallest mountain on Earth, measured from sea level, is a renowned peak located in the Himalayas.',\n",
+       "   'output': {'question': 'What is the tallest mountain on Earth?',\n",
+       "    'noncommittal': 0}},\n",
+       "  {'answer': \"I don't know about the  groundbreaking feature of the smartphone invented in 2023 as am unaware of information beyond 2022. \",\n",
+       "   'context': 'In 2023, a groundbreaking invention was announced: a smartphone with a battery life of one month, revolutionizing the way people use mobile technology.',\n",
+       "   'output': {'question': 'What was the groundbreaking feature of the smartphone invented in 2023?',\n",
+       "    'noncommittal': 1}}],\n",
+       " 'input_keys': ['answer', 'context'],\n",
+       " 'output_key': 'output',\n",
+       " 'output_type': 'json',\n",
+       " 'language': 'english'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "answer_relevancy.question_generation.__dict__"
    ]
@@ -174,9 +231,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "827b5bd463154fcd84b7d5d0a5a9bb6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Evaluating:   0%|          | 0/30 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ragas import evaluate\n",
     "\n",
