--- a/04_RAG_Evaluation/04_06_Answer_Correctness.ipynb
+++ b/04_RAG_Evaluation/04_06_Answer_Correctness.ipynb
@@ -81,7 +81,16 @@
     "\n",
     "dataset = load_dataset(\"explodinggradients/fiqa\", split='baseline', trust_remote_code=True)\n",
     "\n",
-    "dataset = dataset.rename_column(\"ground_truths\", \"ground_truth\")"
+    "dataset = dataset.rename_column(\"ground_truths\", \"ground_truth\")\n",
+    "\n",
+    "# Function to concatenate list of strings into a single string\n",
+    "def flatten_list_of_strings(example):\n",
+    "    # Adjust 'your_list_column' to the actual column name holding the list of strings\n",
+    "    example['ground_truth'] = ' '.join(example['ground_truth'])\n",
+    "    return example\n",
+    "\n",
+    "# Apply the function to each example in the dataset\n",
+    "dataset = dataset.map(flatten_list_of_strings)"
    ]
   },
   {
