adding striking thoughts

--- a/01_Getting_Started/01_09_Downloading_Our_Data.ipynb
+++ b/01_Getting_Started/01_09_Downloading_Our_Data.ipynb
@@ -175,6 +175,27 @@
     "\n",
     "download_file(hackers_url, \"hackers_and_painters.pdf\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Striking Thoughts\n",
+    "\n",
+    "Striking Thoughts is a collection of Bruce Lee's personal writings, offering insights into his philosophy on life, martial arts, and personal development.  It's not a structured guide, but rather a glimpse into Lee's mind through notes, poems, and philosophical reflections. \n",
+    "\n",
+    "Lee's writings blend Eastern philosophies like Taoism and Zen with Western ideas, creating a unique perspective on life. He explores themes like the balance of opposites, the flow of energy, and the importance of living in the present moment. Beyond martial arts, the book offers valuable life lessons applicable to anyone. Lee's thoughts on facing challenges, embracing change, and finding your purpose resonate deeply with readers seeking personal growth."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "striking_thoughts = \"https://eddierockerz.com/wp-content/uploads/2020/11/striking-thoughts_-bruce-lees-wisdom-for-daily-living-pdfdrive.com-.pdf\"\n",
+    "download_file(url: striking_thoughts, filename: \"striking-thoughts.pdf\")"
+   ]
   }
  ],
  "metadata": {
