--- a/04_RAG_Evaluation/04_07_Context_Recall.ipynb
+++ b/04_RAG_Evaluation/04_07_Context_Recall.ipynb
@@ -175,8 +175,7 @@
     "\n",
     "The score is computed by taking the ratio of sentences attributed to the context (True Positives) to the total number of sentences analyzed. \n",
     "\n",
-    "This reflects the proportion of the answer that can be directly traced back to the provided context, effectively measuring the recall of the context in the answer.\n",
-    "\n"
+    "This reflects the proportion of the answer that can be directly traced back to the provided context, effectively measuring the recall of the context in the answer."
    ]
   },
   {
@@ -218,20 +217,18 @@
    "source": [
     "# Recap\n",
     "\n",
+    "\n",
     "**Input:** A dataset containing trios of questions, contexts, and ground truth answers.\n",
     "\n",
     "**Process:**\n",
     "\n",
-    "- **Step 1**: For each question-context-answer set, the LLM look at each sentence in the answer and classify whether it can be directly attributed to the given context. \n",
-    "    - The classification is binary: \"Yes\" (1) for sentences that can be attributed to the context and \"No\" (0) for those that cannot. Each classification must also include a reason.\n",
+    "- **Step 1**: For each question-context-answer set, the LLM looks at each sentence in the answer and classify whether it can be directly attributed to the given context. \n",
     "\n",
-    "- **Step 2**: The LLM classified sentences as either attributed to the context or not, along with reasons for each classification.\n",
+    "- **Step 2**: The LLM classifies sentences as either attributed to the context or not. The classification is binary: \"Yes\" (1) for sentences that can be attributed to the context and \"No\" (0) for those that cannot. \n",
     "\n",
-    "- **Step 3**: The responses from the LLM, which include the classification of sentences and the reasons, are parsed and structured.\n",
+    "- **Step 3**: The score is computed by taking the ratio of sentences attributed to the context (True Positives) to the total number of sentences considered. \n",
     "\n",
-    "- **Step 4**: The score is computed by taking the ratio of sentences attributed to the context (True Positives) to the total number of sentences analyzed. \n",
-    "\n",
-    "**Output**: A score representing the context recall of the answer. This score quantifies the extent to which the information provided in the answer is supported by the given context."
+    "**Output**: A score representing the context recall of the answer, quantifying the extent to which the information provided in the answer is supported by the given context."
    ]
   }
  ],
