--- a/03_Introduction_to_RAG/03_07_Putting_it_All_Together.ipynb
+++ b/03_Introduction_to_RAG/03_07_Putting_it_All_Together.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "setup_llm(api_key=CO_API_KEY)\n",
     "\n",
-    "setup_embed_model()\n",
+    "setup_embed_model(provider=\"fastembed\")\n",
     "\n",
     "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
    ]
