--- a/05_Advanced_RAG/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG/05_02_Optimizing_Chunk_Size.ipynb
@@ -228,16 +228,15 @@
     "\n",
     "## We're only going to focus on a few strategies\n",
     "\n",
-    "I'll show you how to split/chunk test using each method belwo. \n",
+    "I'll show you how to split/chunk test using each method below. \n",
     "\n",
-    "Then, I'll randomly select one configuration one the strategies below and we'll evaluate against our evaluation set. \n",
-    "\n",
-    "Just one evaluations in total, you can do the rest on your own.\n",
     "\n",
     " - 🪙`TokenTextSplitter`\n",
     " \n",
     " - 📜`SentenceSplitter`\n",
     "\n",
+    "### We'll cover these in later lessons\n",
+    " \n",
     " - 🪟`SentenceWindowNodeParser`\n",
     "\n",
     " - 🧠`SemanticSplitterNodeParser`\n",
