--- a/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
@@ -63,35 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f4e33a75a474cb8a3da6ded7250b3b6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 8 files:   0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from llama_index.core.settings import Settings\n",
-    "from utils import setup_llm, setup_embed_model\n",
-    "\n",
-    "setup_llm(api_key=CO_API_KEY)\n",
-    "\n",
-    "setup_embed_model(provider=\"fastembed\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -329,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,22 +501,72 @@
     "\n",
     "`TokenTextSplitter` splits the text into chunks based on a specified number of tokens. It uses a tokenizer to break down the text into individual tokens (words or subwords), and then groups these tokens into chunks of a specified size. If the text doesn't divide evenly into the specified chunk size, the last chunk will contain the remaining tokens, which could be less than the specified chunk size.\n",
     "\n",
-    "`SentenceSplitter`, on the other hand, splits the text into chunks based on sentences. It uses a sentence boundary detection algorithm to identify where sentences begin and end, and then groups these sentences into chunks. The size of these chunks can vary depending on the length of the sentences."
+    "`SentenceSplitter`, on the other hand, splits the text into chunks based on sentences. It uses a sentence boundary detection algorithm to identify where sentences begin and end, and then groups these sentences into chunks. The size of these chunks can vary depending on the length of the sentences.\n",
+    "\n",
+    "# Select Strategy for Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Randomly selected key: sentence_split_chunk_size_512\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.seed(0)\n",
+    "# Randomly select a key from the chunk_size_results dictionary\n",
+    "strategies = list(token_splitter_results.keys()) + list(sentence_splitter_results.keys())\n",
+    "random_key = random.choice(strategies)\n",
+    "print(f\"Randomly selected key: {random_key}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ingest to Qdrant"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1809e791a47413688f506a687cc99de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 8 files:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from llama_index.core.settings import Settings\n",
+    "from utils import setup_llm, setup_embed_model, setup_vector_store\n",
+    "\n",
+    "COLLECTION_NAME = \"words-of-the-senpai-sentence_split_chunk_size_512\"\n",
+    "\n",
+    "setup_llm(api_key=CO_API_KEY)\n",
+    "\n",
+    "setup_embed_model(provider=\"fastembed\")\n",
+    "\n",
+    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
+   ]
   },
   {
    "cell_type": "code",
@@ -553,12 +574,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
+    "from utils import ingest\n",
     "\n",
-    "# Randomly select a key from the chunk_size_results dictionary\n",
-    "random_key = random.choice(list(chunk_size_results.keys()))\n",
-    "print(f\"Randomly selected key: {random_key}\")\n"
+    "transforms = [Settings.embed_model]\n",
+    "\n",
+    "ingest(\n",
+    "    documents=sentence_splitter_results['sentence_split_chunk_size_512'],\n",
+    "    transformations=transforms,\n",
+    "    vector_store=vector_store\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Index Over VectorStore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext\n",
+    "from utils import create_index, create_query_engine\n",
+    "\n",
+    "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
+    "\n",
+    "index = create_index(vector_store=vector_store, storage_context=storage_context)\n",
+    "\n",
+    "query_engine = create_query_engine(index=index, mode=\"query\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instantiate Query Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import create_query_pipeline\n",
+    "\n",
+    "chain = [Settings.llm, query_engine]\n",
+    "\n",
+    "query_pipeline = create_query_pipeline(chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
